# sdf-tool

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/sdf_tool/: sdf_tool.py
